# dataset_build

./: MANIFEST.in  README.md  pyproject.toml
src/dataset_build/: main.py
src/dataset_build/data/ben/: ben.txt
src/dataset_build/data/eng/: history.txt  philosophy.txt  religion.txt
src/dataset_build/data/rus/: rus.txt
src/dataset_build/data/tha/: tha.txt
